--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer utilities {
+    .striped div:nth-child(even) {
+      @apply bg-gray-100
+    }
+  }
